--- a/chronicles.html
+++ b/chronicles.html
@@ -58,11 +58,11 @@
       <article id="folio1" class="folio-entry">
         <h3>◇ Folio I — The Woman by the Road</h3>
         <div class="folio-meta">
-          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
         </div>
         <div class="folio-text">
             <p>
-                We found her on the corpse-road south of Olomouc, among the fallen from yesterday’s skirmish. The rain was fine as thread and turned the mud to wine around them. The air was thick with the stench of wet iron and trampled earth—blood turning sweet as it cooled.
+                We found her on the corpse-road past Rosice, among the fallen from yesterday’s skirmish. The rain was fine as thread and turned the mud to wine around them. The air was thick with the stench of wet iron and trampled earth—blood turning sweet as it cooled.
             </p>
             <p>
                 She sat on the broken axle of a cart, cleaning a fallen soldier’s hand, finger by finger, as though he might wake and thank her. The man’s eyes were open to the rain. She closed them when she was done.
@@ -96,7 +96,7 @@
       <article id="folio2" class="folio-entry">
         <h3>◇ Folio II — The Names at the Fire</h3>
         <div class="folio-meta">
-          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
         </div>
         <div class="folio-text">
         <p>The rain eased toward midnight. We found shelter beneath what was left of a mill, its wheel broken and sunk in the mud. Marek struck flint while I gathered roots and bark dry enough to burn. She said nothing, only held her hands out when the flame caught, as if the light were an old acquaintance.</p>
@@ -137,11 +137,11 @@
       <article id="folio3" class="folio-entry">
         <h3>◇ Folio III — The Road through Haná</h3>
         <div class="folio-meta">
-          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
         </div>
         <div class="folio-text">
           <p>
-            Dawn came pale and brittle. The fire had gone out sometime before first light, and the air stung with frost. We walked south, following the trade road toward Brno. The land here was good once — black soil, low hills, birch and alder — but the fields were bare, the huts half–burned. Smoke still hung in the hollows.
+            Dawn came pale and brittle. The fire had gone out sometime before first light, and the air stung with frost. We walked west, following the trade road toward Náměšť. The land here was good once — black soil, low hills, birch and alder — but the fields were bare, the huts half–burned. Smoke still hung in the hollows.
           </p>
           <p>
             Near noon we passed a woman drawing water from a well. She crossed herself when she saw us, but her eyes lingered on Izolda. She whispered something, but it was inaudible. Izolda only smiled, and the woman dropped her bucket and fled inside.
@@ -171,11 +171,11 @@
       <article id="folio4" class="folio-entry">
         <h3>◇ Folio IV — The Road of the Dead</h3>
         <div class="folio-meta">
-          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
         </div>
         <div class="folio-text">
         <p>
-          The road south was full of the dead. We met them before noon — bodies heaped on a wagon, two peasants driving the oxen through the slush. They said a skirmish had passed three days prior; they were carting what was left to the fields beyond the river.
+          The road west was full of the dead. We met them before noon — bodies heaped on a wagon, two peasants driving the oxen through the slush. They said a skirmish had passed three days prior; they were carting what was left to the fields beyond the river.
         </p>
         <p>
           Izolda went to them without a word. She helped lift the fallen, closed eyes, untangled limbs. I told her not to touch them, but she did not listen. Her hands moved with a care I had forgotten belonged to the living. Marek watched, expressionless, until one of the men crossed himself and muttered that she should be left alone with them.
