--- a/chronicles.html
+++ b/chronicles.html
@@ -135,7 +135,7 @@
         </div>
       </article>
       <article id="folio3" class="folio-entry">
-        <h3>◇ Folio III — The Road through Haná</h3>
+        <h3>◇ Folio III — The Road West</h3>
         <div class="folio-meta">
           <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
         </div>
@@ -357,3 +357,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
