--- a/chronicles.html
+++ b/chronicles.html
@@ -253,6 +253,83 @@
         <div class="folio-footer">
         </div>
       </article>
+            <article id="folio4" class="folio-entry">
+        <h3>◇ Folio V — The Bridge of Náměšť</h3>
+        <div class="folio-meta">
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
+        </div>
+        <div class="folio-text">
+        <p>
+          The hills opened toward evening and the river lay below, wide and dull beneath a rim of yellowed reeds. Beyond it stood the keep of Náměšť. Marek saw it first and said, <i>“There might still be men who remember their oaths.”</i>
+        </p>
+        <p>
+          He knew the garrison and their sergeant, and the gate was opened after only a few words. Soldiers are quick to trust a man who smells of rain and iron; blood speaks plainer than heraldry. I have often thought there is more honour among strangers who have bled together than among families that share a hearth.
+        </p>
+        <p>
+          Inside, the hall was loud with men and smoke. Marek traded rough greetings, and a debt was repaid with bread, soup, and a corner near the fire. The sergeant’s eyes lingered on Izolda.
+        </p>
+        <p>
+          <i>“Where’d you find that one?”</i> he asked.
+        </p>
+        <p>
+          <i>“Near Rosice,”</i> Marek said. <i>“A stray.”</i>
+        </p>
+        <p>
+          The sergeant grinned. <i>“A stray? Looks more like a lord’s daughter stolen for company.”</i>
+        </p>
+        <p>
+          I told him to mind his tongue, but Marek was quicker.
+        </p>
+        <p>
+          <i>“We’re killers, Sergeant, not monsters,”</i> he said. <i>“She walks with us because she wills it. If she wished to leave, she’d be gone already.”</i>
+        </p>
+        <p>
+          The laughter at the tables dulled after that. No one pressed the matter again.
+        </p>
+        <p>
+          The sergeant cleared his throat and leaned closer. <i>“You should know, the lord’s grown weary. Sigismund’s men press harder every month. Wenceslaus no longer holds these lands— and the keep won’t risk sheltering strangers when the red banners of Buda reach the valley. Best you don’t stay long.”</i>
+        </p>
+        <p>
+          Marek nodded once. <i>“We won't.”</i>
+        </p>
+        <p>
+          While they drank, I wrote. The warmth felt borrowed. I have served the Church most of my life — in chapels and on battlefields — yet the girl speaks of God as one who has seen Him and found Him wanting. Her words return to me when I try to pray, clear as bells through fog. Perhaps faith, like wine, spoils when kept too long.
+        </p>
+        <p>
+          Marek came from the armoury with a small dagger and placed it beside her. <i>“For the road,”</i> he said.
+        </p>
+        <p>
+          <i>“I won’t need it,”</i> she answered.
+        </p>
+        <p>
+          <i>“You will,”</i> he said. <i>“There are worse men than me and the priest.”</i>
+        </p>
+        <p>
+          She smiled. <i>“You’re not bad men.”</i>
+        </p>
+        <p>
+          Marek shrugged. <i>“Don’t test the point.”</i>
+        </p>
+        <p>
+          She laughed once, softly, and the fire caught her hair like copper thread.
+        </p>
+        <p>
+          For a moment she looked at me—truly looked—and the noise of the hall fell away. The light made her eyes pale as glass, the kind that turns the world behind it holy or false depending on who gazes through. I set my quill down before I ruined the page.
+        </p>
+        <p>
+          I thought then of the village we left behind—the priest’s face, the stones, the fear. I am glad they did not take her, though I still wonder what sin or sorrow made them hate her so. No lie travels so far as the one men tell in God’s name.
+        </p>        
+        <p>
+          Worse still are those who listen too well—the peasants who drink every word of damnation until it sours their souls, who make a pyre of their neighbor’s grief and call it piety. In such hands, faith becomes a cudgel, and mercy the first to burn.
+        </p>
+        <p>
+          I end this entry with a thought that shames me: perhaps she is a witch, but if so, I would call her one of mercy. The Church burns women for less than speaking kindly. God forgive me, but I have begun to think the Church fears what it cannot own.
+        </p>
+
+        </div>
+        <div class="folio-footer">
+        </div>
+      </article>
     </section>
   </main>
 
@@ -357,4 +434,3 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
