--- a/chronicles.html
+++ b/chronicles.html
@@ -311,19 +311,34 @@
           Marek shrugged. <i>“Don’t test the point.”</i>
         </p>
         <p>
-          She laughed once, softly, and the fire caught her hair like copper thread.
-        </p>
-        <p>
-          For a moment she looked at me—truly looked—and the noise of the hall fell away. The light made her eyes pale as glass, the kind that turns the world behind it holy or false depending on who gazes through. I set my quill down before I ruined the page.
+          She laughed once, softly.
         </p>
         <p>
           I thought then of the village we left behind—the priest’s face, the stones, the fear. I am glad they did not take her, though I still wonder what sin or sorrow made them hate her so. No lie travels so far as the one men tell in God’s name.
-        </p>        
+        </p>
         <p>
           Worse still are those who listen too well—the peasants who drink every word of damnation until it sours their souls, who make a pyre of their neighbor’s grief and call it piety. In such hands, faith becomes a cudgel, and mercy the first to burn.
         </p>
         <p>
-          I end this entry with a thought that shames me: perhaps she is a witch, but if so, I would call her one of mercy. The Church burns women for less than speaking kindly. God forgive me, but I have begun to think the Church fears what it cannot own.
+          The words darkened as I wrote them, the ink bleeding wider than I meant. I felt her eyes before I saw them.
+        </p>
+        <p>
+          For a moment she looked at me—truly looked—and the noise of the hall fell away. The firelight wavered between us, and for a heartbeat I forgot the sound of men and cups around the fire. Her gaze held mine until thought itself seemed to stumble. I could not tell if it was comfort or warning that kept me there.
+        </p>
+        <p>
+          Then she smiled and rose, the hem of her dress whispering over the rushes. <i>“What do you write about?”</i> she asked. It struck me then that she had never asked before.
+        </p>
+        <p>
+          I hesitated. The words on the page were too close to her—too much of her. <i>“Our road,”</i> I said at last. <i>“Where we’ve been, what we’ve seen.”</i>
+        </p>
+        <p>
+          She leaned closer, the fire catching her hair like copper thread. <i>“And me?”</i>
+        </p>
+        <p>
+          <i>“You walk with us,”</i> I answered, though it sounded poor even as I said it. I wondered if she could read, and hoped she could not. But her eyes lingered on the parchment, and I knew she could. She said nothing more, only smiled again and went back to her place by the fire.
+        </p>
+        <p>
+          I set down my quill before my hand betrayed what I dared not think.
         </p>
 
         </div>
