--- a/chronicles.html
+++ b/chronicles.html
@@ -141,7 +141,7 @@
         </div>
         <div class="folio-text">
           <p>
-            Dawn came pale and brittle. The fire had gone out sometime before first light, and the air stung with frost. We walked west, following the trade road toward Náměšť. The land here was good once — black soil, low hills, birch and alder — but the fields were bare, the huts half–burned. Smoke still hung in the hollows.
+            Dawn came pale and brittle. The fire had gone out sometime before first light, and the air stung with cold. We walked west, following the trade road toward Náměšť. The land here was good once — black soil, low hills, birch and alder — but the fields were bare, the huts half–burned. Smoke still hung in the hollows.
           </p>
           <p>
             Near noon we passed a woman drawing water from a well. She crossed herself when she saw us, but her eyes lingered on Izolda. She whispered something, but it was inaudible. Izolda only smiled, and the woman dropped her bucket and fled inside.
@@ -229,7 +229,7 @@
           <i>“Then He armed them poorly,”</i> Marek grunted.
         </p>
         <p>
-          We left before they could find courage again. The sun was gone, and the road glimmered with frost. None of us spoke until the village lights had vanished behind the trees.
+          We left before they could find courage again. Night was approaching, and the road darkened ahead. None of us spoke until the village lights had vanished behind the trees.
         </p>
         <p>
           We made camp by the river. The fire smoked but held. Marek sat sharpening his blade; I cleaned the hammer’s face and spike. Izolda watched us both as if weighing which of us was more dangerous.
@@ -253,7 +253,7 @@
         <div class="folio-footer">
         </div>
       </article>
-            <article id="folio4" class="folio-entry">
+            <article id="folio5" class="folio-entry">
         <h3>◇ Folio V — The Bridge of Náměšť</h3>
         <div class="folio-meta">
           <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
