--- a/chronicles.html
+++ b/chronicles.html
@@ -214,11 +214,12 @@
           The priest raised his cross, shouting a prayer that cracked his voice. Then the men rushed.
         </p>
         <p>
-          Marek’s blade moved first — one clean stroke, another, the sound of iron through cloth. No wasted motion, only the solid rhythm of a trained man. I joined him without thinking; the hammer swung of its own memory. The spike found a chest, the flat caught a jaw. It was over in heartbeats. I remembered the weight, the recoil, the sudden quiet that always follows.
+          Marek’s blade moved first — one clean stroke across a throat, another that took a shoulder. I heard the scrape of plate on padding, the rasp of mail and leather, the sharp breath between blows. No wasted motion, only the hard rhythm of a trained man.         </p>
+        <p>
+          They fell on us with shovels and sickles, blind with fear. I joined him without thinking; the hammer swung of its own memory. The spike found a chest, the flat caught a jaw. Bone gave a sound like splitting wood. I remembered the weight, the recoil, the smell.
         </p>
         <p>
-          One villager lay in the dirt, chest split open like wet bark. The rest fell back, dragging the priest with them, the women screaming from the doorways.
-        </p>
+          A scream, then two more, then nothing but the rasp of our breathing — the sudden quiet that always follows. Three lay still in the mud, one crawling, leaving red behind him; another’s chest split open like wet bark. The rest fell back, dragging the priest with them, the women screaming from the doorways.        </p>
         <p>
           Marek wiped his sword on his red surcoat. <i>“Idiots,”</i> he said. <i>“They came at steel with farm tools.”</i>
         </p>
