--- a/chronicles.html
+++ b/chronicles.html
@@ -190,10 +190,18 @@
           <i>“They’re easier to help,”</i> she said.
         </p>
         <p>
-          By dusk we reached a village crouched around a small green, its wells boarded, its church leaning like a drunk. Smoke rose from a few chimneys but no sound came from the yards. The people watched from behind fences, eyes hollow with suspicion.
+          By dusk we reached a village crouched around a small green, its wells boarded, its church leaning like a drunk. The roofs sagged under damp that never left; even the smoke from the chimneys seemed reluctant to rise. We went there only for bread and a dry place to sleep, nothing more.        </p>
+        <p>
+        <p>
+          As we crossed the green, doors half-closed like eyes pretending to sleep. A dog barked once and was hushed. No one spoke to us, though faces flickered at every window. The air smelled of tallow and fear.
         </p>
         <p>
-          A priest came out first — old, thin, with his stole worn to threads. <i>“You bring her here?”</i> he shouted. <i>“Back from the gallows? God have mercy, you bring her here again?”</i>
+          They watched Izolda most of all. Wherever she passed, voices dropped to murmurs, hands rose to crosses, and children were pulled back by their sleeves. She walked as if unaware of them, her bare feet dark with mud, her gaze fixed on the church at the far end of the square.
+        </p>
+        <p>
+          I felt the weight of their silence pressing on us — that unspoken accusation that follows strangers too long on the road. Then the church door opened and the priest came out, thin as a shadow, his stole frayed to threads.
+        </p>
+        <i>“You bring her here?”</i> he shouted. <i>“Back from the gallows? God have mercy, you bring her here again?”</i>
         </p>
         <p>
           <i>“We’ve never been here,”</i> Marek said, his hand resting on the hilt of his longsword.
@@ -202,7 +210,10 @@
           <i>“She has,”</i> the priest spat. <i>“I saw her hang with my own eyes. Witch, consorter, blasphemer. Look! The mark still shows.”</i>
         </p>
         <p>
-          Izolda stood calm as stone. <i>“If you hung me,”</i> she said, <i>“you did it badly.”</i>
+          Izolda did not flinch or step back. The wind caught her hair and drew it across her face, but she did not move to brush it away. There was no fear in her eyes—only a strange patience, as if she’d been waiting for this moment to arrive.
+        </p>
+        <p>
+        <i>“If you hung me,”</i> she said, <i>“you did it badly.”</i>
         </p>
         <p>
           The crowd stirred; a stone struck the mud at her feet. Another man came forward with a hoe. Marek moved between them.
