--- a/chronicles.html
+++ b/chronicles.html
@@ -266,7 +266,7 @@
         <div class="folio-footer">
         </div>
       </article>
-            <article id="folio5" class="folio-entry">
+      <article id="folio5" class="folio-entry">
         <h3>◇ Folio V — The Bridge of Náměšť</h3>
         <div class="folio-meta">
           <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
@@ -354,6 +354,55 @@
           I set down my quill before my hand betrayed what I dared not think.
         </p>
 
+        </div>
+        <div class="folio-footer">
+        </div>
+      </article>
+      <article id="folio7" class="folio-entry">
+        <h3>◇ Folio VI — The Crossing at Třebíč</h3>
+        <div class="folio-meta">
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
+        </div>
+        <div class="folio-text">
+          <p>
+            We left Náměšť before sunrise, the mist still heavy on the bridge. Behind us the keep slept under its banners; ahead, the road bent through wet fields and the first red of autumn. By noon we had fallen in with a band of five veterans bound for Třebíč — deserters mostly, men with more scars than prayers.
+          </p>
+          <p>
+            They were glad for our company, and Marek judged that numbers meant safety. We camped together that night beneath a ruined barn, the air thick with the smell of damp hay and wine. The veterans sang a campaign song I half-remembered from Nicopolis. Izolda asked one man where he’d fought, another why he still carried his rusted halberd. They laughed at first, but she had a gift for listening — the kind that makes even bitter men tell their truths. 
+          </p>
+          <p>
+            When the bottle went round again, one of them — a big man with a scar across his mouth — looked too long at Izolda. I saw it and Marek saw it too.
+          </p>
+          <p>
+            The fire burned low. One by one they fell asleep. I dreamt of bells, then of shouting, but it was not a dream.
+          </p>
+          <p>
+            Izolda’s voice — a sound between a breath and a cry — pulled me awake. The man was on her, his hand over her mouth, his weight pinning her down. Her dress was torn at the shoulder. Marek was already moving.
+          </p>
+          <p>
+            He hit the man once, hard, but he would not move. The soldier was strong, drunk on fear as much as wine. Marek reached for his rondel dagger, but before he drew breath to strike, the man stiffened. A wet sound followed, low and choking. Izolda’s hand was at his throat. The dagger Marek had given her in Náměšť was buried to the hilt.
+          </p>
+          <p>
+            Marek shoved the corpse aside and lifted her up. She was shaking, covered in the man’s blood. I threw my cloak over her shoulders. For the first time since I have known her, she looked truly afraid — not of death, but of the living.
+          </p>
+          <p>
+            <i>“It’s done,”</i> Marek said. She nodded, still trembling.
+          </p>
+          <p>
+            The others woke to silence and stared, wide-eyed, but none spoke. Marek told them the man attacked her and that was the end of it. No one argued.
+          </p>
+          <p>
+            At dawn we left the camp. The body lay in the straw, eyes open to the rafters. Izolda said nothing as we walked, but her hands would not stop shaking. When the sun climbed higher, she looked once at the dagger — clean now, hanging from her belt — then met Marek’s eyes. A small nod passed between them.
+          </p>
+          <p>
+            I understood it. He had told her once that she would need it.
+          </p>
+          <p>
+            By evening, she was herself again — quiet, composed, her face calm as if none of it had happened. But I know what I saw: the blood on her throat, the tremor in her voice, the moment she reached for Marek’s arm and would not let go.
+          </p>
+          <p>
+            I write these lines by the roadside near Třebíč. The others have gone ahead to find water. Marek sharpens his blade; Izolda sleeps beneath my cloak. There is no prayer for such nights. Only the knowledge that she lives — and that for the first time, it was by her own hand.
+          </p>
         </div>
         <div class="folio-footer">
         </div>
