--- a/chronicles.html
+++ b/chronicles.html
@@ -365,7 +365,7 @@
         </div>
         <div class="folio-text">
           <p>
-            We left Náměšť before sunrise, the mist still heavy on the bridge. Behind us the keep slept under its banners; ahead, the road bent through wet fields and the first red of autumn. By noon we had fallen in with a band of five veterans bound for Třebíč — deserters mostly, men with more scars than prayers.
+            We left Náměšť before sunrise, the mist still heavy on the bridge. Behind us the keep slept under its banners; ahead, the road bent through wet fields. By noon we had fallen in with a band of five veterans bound for Třebíč — deserters mostly, men with more scars than prayers.
           </p>
           <p>
             They were glad for our company, and Marek judged that numbers meant safety. We camped together that night beneath a ruined barn, the air thick with the smell of damp hay and wine. The veterans sang a campaign song I half-remembered from Nicopolis. Izolda asked one man where he’d fought, another why he still carried his rusted halberd. They laughed at first, but she had a gift for listening — the kind that makes even bitter men tell their truths. 
@@ -392,7 +392,7 @@
             The others woke to silence and stared, wide-eyed, but none spoke. Marek told them the man attacked her and that was the end of it. No one argued.
           </p>
           <p>
-            At dawn we left the camp. The body lay in the straw, eyes open to the rafters. Izolda said nothing as we walked, but her hands would not stop shaking. When the sun climbed higher, she looked once at the dagger — clean now, hanging from her belt — then met Marek’s eyes. A small nod passed between them.
+            At dawn we left the camp. The body lay in the straw, eyes open toward the rafters. Izolda said nothing as we walked. Her hands kept shaking. When the sun climbed higher, she looked once at the dagger — clean now, hanging from her belt — then met Marek’s eyes. A small nod passed between them.
           </p>
           <p>
             I understood it. He had told her once that she would need it.
