--- a/chronicles.html
+++ b/chronicles.html
@@ -53,6 +53,7 @@
         <a href="#folio3">Folio III</a>
         <a href="#folio4">Folio IV</a>
         <a href="#folio5">Folio V</a>
+        <a href="#folio6">Folio VI</a>
       </nav>
 
       <article id="folio1" class="folio-entry">
