--- a/wip.html
+++ b/wip.html
@@ -19,9 +19,24 @@
     <!-- Main Content Area -->
     <main>
         <section>
-            <p>
-                Oh no! There is no content here yet! :( I'm building something crazy here though, captialism just prevents me from working on my passions 24/7, apologies.
-            <br>
+            <div class="decorated-h1">
+                <div class="flourish-left">
+                    <span class="flourish-line-left"></span>
+                    <span class="flourish-box"></span>
+                </div>
+                    <h1>UNDER CONSTRUCTION</h1>
+                <div class="flourish-right">
+                    <span class="flourish-box"></span>
+                    <span class="flourish-line-right"></span>
+                </div>
+            </div>
+            <p class="page-desc">Oh no! There’s nothing here yet! 😭</p>
+            <p class="page-desc">I’m working on this section whenever real life stops demanding tribute. Thanks for your patience!</p>
+            <div class="fancy-divider">
+                <span class="line left"></span>
+                <span class="diamond"></span>
+                <span class="line right"></span>
+            </div>
         </section>
     </main>
 
