--- a/index.html
+++ b/index.html
@@ -17,18 +17,33 @@
     <!-- Main Content Area -->
     <main>
         <section>
-            <p>
+            <div class="decorated-h1">
+                <div class="flourish-left">
+                    <span class="flourish-line-left"></span>
+                    <span class="flourish-box"></span>
+                </div>
+                    <div class="site-logo">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                <div class="flourish-right">
+                    <span class="flourish-box"></span>
+                    <span class="flourish-line-right"></span>
+                </div>
+            </div>
+            <p class="page-desc">
                 Welcome to my personal website, a space where I share my worldbuilding and roleplaying projects. 
-                Here, you'll find a variety of resources designed to inspire and support your own creative endeavors. 
+                Here, you'll also find a variety of resources designed to inspire and support your own creative endeavors. 
                 <br><br>
                 Feel free to draw inspiration from my work, as it’s the very same process that has fueled my own creations.
-                <br><br>
-                I believe that crafting imaginative worlds to explore with friends is far more rewarding than endlessly 
-                scrolling through social media, so let's dive in and start creating!
                 <br><br>
                 As time goes on, this vault will grow and I will add a lot more content.
             </p>
             <br>
+            <div class="fancy-divider">
+                <span class="line left"></span>
+                <span class="diamond"></span>
+                <span class="line right"></span>
+            </div>
         </section>
     </main>
 
