--- a/nav.html
+++ b/nav.html
@@ -1,11 +1,10 @@
     <!-- Header with Navigation -->
     <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="The Vault of Enduriel" class="site-logo">
-        </div>
         <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
+            <ul> 
+                <span class="nav-line">|</span>
+                <li><a href="index.html">HOME</a></li> 
+                <span class="nav-line">|</span>
                 <li class="mega">
                 <a href="#">WORLD OF WARCRAFT RP</a>
                 <div class="mega-menu" role="menu" aria-label="WoW RP Mega Menu">
@@ -31,8 +30,11 @@
                     </div>
                 </div>
                 </li>
-                <li><a href="chronicles.html">PROJECT: CHRONICLES</a></li>
+                <span class="nav-line">|</span>
+                <li><a href="chronicles.html">PROJECT: CHRONICLES</a></li>   
+                <span class="nav-line">|</span>
                 <li><a href="music.html">MUSIC</a></li>
+                <span class="nav-line">|</span>
             </ul>
         </nav>
     </header>
