--- a/nav.html
+++ b/nav.html
@@ -18,14 +18,17 @@
                     <div class="mega-col">
                     <h4>Worldbuilding</h4>
                     <a href="economy.html">Economy Guide</a>
+                    <a href="warguide.html">A Guide to Low-Fantasy Warfare</a>
+                    <a href="armorial.html">Aldenwall: Eastern Kingdoms Armorial Ledger</a>
+                    <br>
+                    <p class="nav-wip">WORK IN PROGRESS:</p>
                     <a href="wip.html">Magical Reagents & Material Index</a>
                     <a href="wip.html">Curses, Afflictions & Diseases</a>
-                    <a href="warguide.html">A Field Guide to Low-Fantasy Warfare</a>
-                    <a href="armorial.html">Aldenwall: Eastern Kingdoms Armorial Ledger</a>
                     </div>
 
                     <div class="mega-col">
                     <h4>Magic</h4>
+                    <p class="nav-wip">WORK IN PROGRESS:</p>
                     <a href="wip.html">The Spellbook</a>
                     </div>
                 </div>
