--- a/nav.html
+++ b/nav.html
@@ -13,12 +13,14 @@
                     <a href="scriptorium.html">The Scriptorium</a>
                     <a href="trp-guides.html">TRP 3 Customization Guide</a>
                     <a href="contracts.html">Contract & Agreement Templates</a>
+                    <a href="#">My Characters</a>
                     </div>
 
                     <div class="mega-col">
                     <h4>Worldbuilding</h4>
                     <a href="economy.html">Economy Guide</a>
                     <a href="warguide.html">A Guide to Low-Fantasy Warfare</a>
+                    <a href="troopguide.html">A Guide to Realistic Troops</a>
                     <a href="armorial.html">Aldenwall: Eastern Kingdoms Armorial Ledger</a>
                     <br>
                     <p class="nav-wip">WORK IN PROGRESS:</p>
